2023-XX-XX   2.8.4:
-------------------
  * simplify `copy_n()` (remove special cases), see #d2d6fd53
  * improve documentation and testing


2023-11-11   2.8.3:
-------------------
  * ensure readonly attribute is set correctly when creating new objects,
    see #211
  * optimize sparse bitarray compression for raw block type
  * improve hash functions in Bloom filter example


2023-10-03   2.8.2:
-------------------
  * update cibuildwheel to 2.16.1 in order to provide cp312 wheels on PyPI
  * improve error messages for masked assignment
  * simplify test collection
  * added `pytest.ini` to allow running pytest with no additional arguments,
    see #208
  * `util.sc_encode()`: avoid writing empty blocks at end of compressed
    stream, i.e. skip encoding when total population count is reached


2023-08-06   2.8.1:
-------------------
  * use reconstructor function for pickling, see #207
  * simplify implementation of `.reverse()`


2023-07-22   2.8.0:
-------------------
  * allow [integer sequence indexing](indexing.rst) by list of indices,
    see #204 (addresses #156 and #190)
  * add [masked indexing](indexing.rst) by bitarray masks,
    see #205 (addresses #190)
  * improve `.bytereverse()` docstring, see issue #202


2023-06-24   2.7.6:
-------------------
  * remove caching hash value, fixes issue #201


2023-06-10   2.7.5:
-------------------
  * fix for pypy3.9-v7.3.11, #198 (fixes #188)
  * enable building wheels for PyPy


2023-05-29   2.7.4:
-------------------
  * register `bitarray` as `abc.MutableSequence`, see #196
  * cibuildwheel: update macOS version to 11 from unsupported 10.15, see
    https://github.com/actions/runner-images/issues/5583
  * improve documentation regarding type when indexing single
    bitarray items, #192


2023-02-20   2.7.3:
-------------------
  * fix popcount64 name conflict on NetBSD, #189
  * even though PyPy is not actively supported, allow running tests for
    PyPy 3.7 and 3.8, see also #188